Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 22:10+0200\n"
+"PO-Revision-Date: 2010-08-23 22:11+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2366,10 +2366,9 @@ msgid "Lines terminated by"
 msgstr "Satırı sonlandıran:"
 
 #: libraries/config/messages.inc.php:80
-#, fuzzy
 #| msgid "Excel edition:"
 msgid "Excel edition"
-msgstr "Excel yapısı:"
+msgstr "Excel yapısı"
 
 #: libraries/config/messages.inc.php:83
 msgid "Database name template"
