Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2400,10 +2400,9 @@ msgid "Table caption"
 msgstr "Tablo başlığı"
 
 #: libraries/config/messages.inc.php:94 libraries/config/messages.inc.php:100
-#, fuzzy
 #| msgid "Include table caption"
 msgid "Continued table caption"
-msgstr "Tablo başlığını dahil et"
+msgstr "Devam eden tablo başlığı"
 
 #: libraries/config/messages.inc.php:95 libraries/config/messages.inc.php:101
 #: libraries/export/latex.php:53 libraries/export/latex.php:77
