--- a/po/tr.po
+++ b/po/tr.po
@@ -2457,10 +2457,9 @@ msgid "Creation/Update/Check dates"
 msgstr "Oluşturma/Güncelleme/Denetleme tarihleri"
 
 #: libraries/config/messages.inc.php:120
-#, fuzzy
 #| msgid "Delayed inserts"
 msgid "Use delayed inserts"
-msgstr "Gecikmiş eklemeler"
+msgstr "Gecikmiş eklemeleri kullan"
 
 #: libraries/config/messages.inc.php:121 libraries/export/sql.php:53
 msgid "Disable foreign key checks"
