--- a/po/tr.po
+++ b/po/tr.po
@@ -2479,10 +2479,9 @@ msgid "Maximal length of created query"
 msgstr "Oluşturulan sorgunun azami uzunluğu"
 
 #: libraries/config/messages.inc.php:133
-#, fuzzy
 #| msgid "Export"
 msgid "Export type"
-msgstr "Dışa Aktar"
+msgstr "Dışa aktarma türü"
 
 #: libraries/config/messages.inc.php:134 libraries/export/sql.php:50
 msgid "Enclose export in a transaction"
