--- a/po/tr.po
+++ b/po/tr.po
@@ -2648,10 +2648,9 @@ msgid "Microsoft Office"
 msgstr "Microsoft Office"
 
 #: libraries/config/messages.inc.php:183
-#, fuzzy
 #| msgid "Open Document Text"
 msgid "Open Document"
-msgstr "Açık Belge Metini"
+msgstr "Open Belgesi"
 
 #: libraries/config/messages.inc.php:185
 msgid "Other core settings"
