Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2708,10 +2708,9 @@ msgid "Authentication"
 msgstr "Kimlik denetimi"
 
 #: libraries/config/messages.inc.php:195
-#, fuzzy
 #| msgid "Authentication type"
 msgid "Authentication settings"
-msgstr "Kimlik denetimi türü"
+msgstr "Kimlik denetimi ayarları"
 
 #: libraries/config/messages.inc.php:196
 msgid "Server configuration"
