--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 22:16+0200\n"
+"PO-Revision-Date: 2010-08-23 22:18+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2734,7 +2734,6 @@ msgid "Configuration storage"
 msgstr "Yapılandırma depolama"
 
 #: libraries/config/messages.inc.php:200
-#, fuzzy
 #| msgid ""
 #| "Configure phpMyAdmin database to gain access to additional features, see "
 #| "[a@../Documentation.html#linked-tables]phpMyAdmin configuration storage[/"
@@ -2744,9 +2743,9 @@ msgid ""
 "features, see [a@Documentation.html#linked-tables]phpMyAdmin configuration "
 "storage[/a] in documentation"
 msgstr ""
-"İlave özelliklere erişim kazanmak için phpMyAdmin veritabanını yapılandırır, "
-"belgelerde [a@../Documentation.html#linked-tables]phpMyAdmin yapılandırma "
-"depolama[/a] kısmına bakın"
+"İlave özelliklere erişim kazanmak için phpMyAdmin yapılandırma depolamasını "
+"yapılandırır, belgelerde [a@../Documentation.html#linked-tables]phpMyAdmin "
+"yapılandırma depolama[/a] kısmına bakın"
 
 #: libraries/config/messages.inc.php:201
 msgid "Changes tracking"
