--- a/po/tr.po
+++ b/po/tr.po
@@ -2792,10 +2792,9 @@ msgid "SQL queries settings"
 msgstr "SQL sorguları ayarları"
 
 #: libraries/config/messages.inc.php:215
-#, fuzzy
 #| msgid "SQL history"
 msgid "SQL Validator"
-msgstr "SQL geçmişi"
+msgstr "SQL Onaylayıcı"
 
 #: libraries/config/messages.inc.php:216
 msgid ""
