--- a/po/tr.po
+++ b/po/tr.po
@@ -2794,7 +2794,7 @@ msgstr "SQL sorguları ayarları"
 #: libraries/config/messages.inc.php:215
 #| msgid "SQL history"
 msgid "SQL Validator"
-msgstr "SQL Onaylayıcı"
+msgstr "SQL Onaylayıcısı"
 
 #: libraries/config/messages.inc.php:216
 msgid ""
