--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 22:18+0200\n"
+"PO-Revision-Date: 2010-08-23 22:19+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2821,10 +2821,9 @@ msgid "Choose how you want tabs to work"
 msgstr "Sekmelerin nasıl çalışmasını istiyorsanız seçin"
 
 #: libraries/config/messages.inc.php:221
-#, fuzzy
 #| msgid "Use text field"
 msgid "Text fields"
-msgstr "Metin alanını kullan"
+msgstr "Metin alanları"
 
 #: libraries/config/messages.inc.php:222
 #, fuzzy
