--- a/po/tr.po
+++ b/po/tr.po
@@ -2835,10 +2835,9 @@ msgid "Texy! text"
 msgstr "Texy! metni"
 
 #: libraries/config/messages.inc.php:225
-#, fuzzy
 #| msgid "Warning"
 msgid "Warnings"
-msgstr "Uyarı"
+msgstr "Uyarılar"
 
 #: libraries/config/messages.inc.php:226
 msgid "Disable some of the warnings shown by phpMyAdmin"
