--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-23 22:21+0200\n"
+"PO-Revision-Date: 2010-08-23 22:22+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2922,10 +2922,9 @@ msgid "Do not import empty rows"
 msgstr "Boş satırları içe aktarma"
 
 #: libraries/config/messages.inc.php:251
-#, fuzzy
 #| msgid "Import currencies <i>(ex. $5.00 to 5.00)</i>"
 msgid "Import currencies ($5.00 to 5.00)"
-msgstr "Parasalları içe aktar <i>(örn. $5.00'ı 5.00'a)</i>"
+msgstr "Parasalları içe aktar ($5.00'ı 5.00'a)"
 
 #: libraries/config/messages.inc.php:252
 #, fuzzy
