--- a/po/tr.po
+++ b/po/tr.po
@@ -2940,10 +2940,9 @@ msgid "Partial import: skip queries"
 msgstr "Kısmi içe aktarma: sorguları atla"
 
 #: libraries/config/messages.inc.php:256
-#, fuzzy
 #| msgid "Do not use <code>AUTO_INCREMENT</code> for zero values"
 msgid "Do not use AUTO_INCREMENT for zero values"
-msgstr "Sıfır değerleri için <code>AUTO_INCREMENT</code> değeri kullanma"
+msgstr "Sıfır değerleri için AUTO_INCREMENT değeri kullanma"
 
 #: libraries/config/messages.inc.php:259
 msgid "Initial state for sliders"
