Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 06:43+0200\n"
+"PO-Revision-Date: 2010-08-24 06:49+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2803,6 +2803,11 @@ msgid ""
 "strong].[br][em][a@http://sqlvalidator.mimer.com/]Mimer SQL Validator[/a], "
 "Copyright 2002 Upright Database Technology. All rights reserved.[/em]"
 msgstr ""
+"Eğer SQL Onaylayıcı hizmetini kullanmak isterseniz, [strong]tüm SQL "
+"ifadelerinin istatistiksel amaç için isimsiz olarak depolanacağının[/strong] "
+"farkında olmalısınız.[br][em][a@http://sqlvalidator.mimer.com/]Mimer SQL "
+"Onaylayıcı[/a], Telif Hakkı 2002 Upright Database Technology. Tüm hakları "
+"saklıdır.[/em]"
 
 #: libraries/config/messages.inc.php:217
 msgid "Startup"
