--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 06:57+0200\n"
+"PO-Revision-Date: 2010-08-24 06:58+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3067,7 +3067,7 @@ msgstr "SQL sorgusu görüntülendiğinde kullanılan en fazla karakter sayısı
 
 #: libraries/config/messages.inc.php:285
 msgid "Limit column characters"
-msgstr ""
+msgstr "Sütun karakterlerini sınırlandır"
 
 #: libraries/config/messages.inc.php:286
 msgid ""
