--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 06:58+0200\n"
+"PO-Revision-Date: 2010-08-24 07:00+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3124,7 +3124,7 @@ msgstr "Oturum açma tanımlama bilgisi geçerliliği"
 
 #: libraries/config/messages.inc.php:294
 msgid "Double size of textarea for LONGTEXT fields"
-msgstr ""
+msgstr "LONGTEXT alanları için metin alanın iki katı boyutu"
 
 #: libraries/config/messages.inc.php:295
 msgid "Bigger textarea for LONGTEXT"
