--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 07:00+0200\n"
+"PO-Revision-Date: 2010-08-24 07:01+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3132,7 +3132,7 @@ msgstr "LONGTEXT için en büyük metin alanı"
 
 #: libraries/config/messages.inc.php:296
 msgid "Use icons on main page"
-msgstr ""
+msgstr "Ana sayfada simgeleri kullan"
 
 #: libraries/config/messages.inc.php:297
 msgid "Maximum number of characters used when a SQL query is displayed"
