--- a/po/tr.po
+++ b/po/tr.po
@@ -3145,7 +3145,7 @@ msgstr "En fazla görüntülenecek SQL uzunluğu"
 #: libraries/config/messages.inc.php:299 libraries/config/messages.inc.php:304
 #: libraries/config/messages.inc.php:331
 msgid "Users cannot set a higher value"
-msgstr ""
+msgstr "Kullanıcılar yüksek değer ayarlayamazlar"
 
 #: libraries/config/messages.inc.php:300
 msgid "Maximum number of databases displayed in left frame and database list"
