--- a/po/tr.po
+++ b/po/tr.po
@@ -3217,10 +3217,9 @@ msgid "Use natural order for sorting table and database names"
 msgstr "Tablo ve veritabanı adlarını sıralamak için doğal sıra kullan"
 
 #: libraries/config/messages.inc.php:314
-#, fuzzy
 #| msgid "Alter table order by"
 msgid "Natural order"
-msgstr "Tablo sıralamasını şuna göre değiştir"
+msgstr "Doğal sıra"
 
 #: libraries/config/messages.inc.php:315 libraries/config/messages.inc.php:325
 msgid "Use only icons, only text or both"
