--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 08:36+0200\n"
+"PO-Revision-Date: 2010-08-24 08:37+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3321,7 +3321,7 @@ msgstr "Varsayılan sorgu penceresi sekmesi"
 
 #: libraries/config/messages.inc.php:336 libraries/config/messages.inc.php:338
 msgid "Query window height (in pixels)"
-msgstr ""
+msgstr "Sorgu penceresi yüksekliği (piksel olarak)"
 
 #: libraries/config/messages.inc.php:337
 #, fuzzy
