--- a/po/tr.po
+++ b/po/tr.po
@@ -3356,7 +3356,7 @@ msgstr "Üstveri Üstbilgileri"
 
 #: libraries/config/messages.inc.php:344
 msgid "Show help button instead of Documentation text"
-msgstr ""
+msgstr "Belge metni yerine yardım düğmesi göster"
 
 #: libraries/config/messages.inc.php:345
 msgid "Show help button"
