--- a/po/tr.po
+++ b/po/tr.po
@@ -3360,7 +3360,7 @@ msgstr "Belge metni yerine yardım düğmesi göster"
 
 #: libraries/config/messages.inc.php:345
 msgid "Show help button"
-msgstr ""
+msgstr "Yardım düğmesi göster"
 
 #: libraries/config/messages.inc.php:347
 msgid "Directory where exports can be saved on server"
