--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1968,7 +1968,7 @@ msgstr "Incorrect value"
 #: libraries/config/validate.lib.php:458
 #, php-format
 msgid "Value must be equal or lower than %s"
-msgstr ""
+msgstr "Value must be equal or lower than %s"
 
 #: libraries/config/FormDisplay.class.php:536
 #, php-format
