--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1995,7 +1995,7 @@ msgstr "import will not work, missing function (%s)"
 #: libraries/config/FormDisplay.class.php:751
 #, php-format
 msgid "export will not work, missing function (%s)"
-msgstr ""
+msgstr "export will not work, missing function (%s)"
 
 #: libraries/config/FormDisplay.class.php:758
 #, fuzzy
