Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2015,7 +2015,7 @@ msgstr "maximum %s"
 
 #: libraries/config/FormDisplay.tpl.php:174
 msgid "This setting is disabled, it will not be applied to your configuration"
-msgstr ""
+msgstr "This setting is disabled, it will not be applied to your configuration"
 
 #: libraries/config/FormDisplay.tpl.php:249
 #, php-format
