--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2187,7 +2187,7 @@ msgstr "Field navigation using Ctrl+Arrows"
 
 #: libraries/config/messages.inc.php:43
 msgid "Debug PHP"
-msgstr ""
+msgstr "Debug PHP"
 
 #: libraries/config/messages.inc.php:44
 msgid "Debug SQL"
