Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2191,7 +2191,7 @@ msgstr "Debug PHP"
 
 #: libraries/config/messages.inc.php:44
 msgid "Debug SQL"
-msgstr ""
+msgstr "Debug SQL"
 
 #: libraries/config/messages.inc.php:45
 #, fuzzy
