--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2235,10 +2235,9 @@ msgid "Default table tab"
 msgstr "Default table tab"
 
 #: libraries/config/messages.inc.php:54
-#, fuzzy
 #| msgid "Show binary contents as HEX"
 msgid "Show binary contents as HEX by default"
-msgstr "Show binary contents as HEX"
+msgstr "Show binary contents as HEX by default"
 
 #: libraries/config/messages.inc.php:55 libraries/display_tbl.lib.php:597
 msgid "Show binary contents as HEX"
