--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2261,7 +2261,7 @@ msgstr "Display servers as a list"
 
 #: libraries/config/messages.inc.php:60
 msgid "Edit SQL queries in popup window"
-msgstr ""
+msgstr "Edit SQL queries in popup window"
 
 #: libraries/config/messages.inc.php:61
 #, fuzzy
