Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2264,10 +2264,9 @@ msgid "Edit SQL queries in popup window"
 msgstr "Edit SQL queries in popup window"
 
 #: libraries/config/messages.inc.php:61
-#, fuzzy
 #| msgid "Edit next row"
 msgid "Edit in window"
-msgstr "Edit next row"
+msgstr "Edit in window"
 
 #: libraries/config/messages.inc.php:62
 #, fuzzy
