--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2400,10 +2400,9 @@ msgid "Table caption"
 msgstr "Table caption"
 
 #: libraries/config/messages.inc.php:94 libraries/config/messages.inc.php:100
-#, fuzzy
 #| msgid "Include table caption"
 msgid "Continued table caption"
-msgstr "Include table caption"
+msgstr "Continued table caption"
 
 #: libraries/config/messages.inc.php:95 libraries/config/messages.inc.php:101
 #: libraries/export/latex.php:53 libraries/export/latex.php:77
