--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2440,7 +2440,7 @@ msgstr "Remember file name template"
 
 #: libraries/config/messages.inc.php:116
 msgid "Enclose table and column names with backquotes"
-msgstr ""
+msgstr "Enclose table and column names with backquotes"
 
 #: libraries/config/messages.inc.php:117 libraries/config/messages.inc.php:255
 #: libraries/display_export.lib.php:354
