--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 11:18+0200\n"
+"PO-Revision-Date: 2010-08-24 11:19+0200\n"
 "Last-Translator: Robert Readman <robert_readman@hotmail.com>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -2454,7 +2454,7 @@ msgstr "Syntax to use when inserting data"
 
 #: libraries/config/messages.inc.php:119
 msgid "Creation/Update/Check dates"
-msgstr ""
+msgstr "Creation/Update/Check dates"
 
 #: libraries/config/messages.inc.php:120
 #, fuzzy
