--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2479,10 +2479,9 @@ msgid "Maximal length of created query"
 msgstr "Maximal length of created query"
 
 #: libraries/config/messages.inc.php:133
-#, fuzzy
 #| msgid "Export"
 msgid "Export type"
-msgstr "Export"
+msgstr "Export type"
 
 #: libraries/config/messages.inc.php:134 libraries/export/sql.php:50
 msgid "Enclose export in a transaction"
