Translation update done using Pootle.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2546,7 +2546,7 @@ msgstr "CSV"
 
 #: libraries/config/messages.inc.php:155
 msgid "Developer"
-msgstr ""
+msgstr "Developer"
 
 #: libraries/config/messages.inc.php:156
 msgid "Settings for phpMyAdmin developers"
