--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2574,10 +2574,9 @@ msgid "Features"
 msgstr "Features"
 
 #: libraries/config/messages.inc.php:163
-#, fuzzy
 #| msgid "Generate"
 msgid "General"
-msgstr "Generate"
+msgstr "General"
 
 #: libraries/config/messages.inc.php:164
 msgid "Set some commonly used options"
