--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 13:31+0200\n"
-"PO-Revision-Date: 2010-08-24 13:59+0200\n"
+"PO-Revision-Date: 2010-08-24 14:00+0200\n"
 "Last-Translator: Robert Readman <robert_readman@hotmail.com>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -2661,10 +2661,9 @@ msgid "Settings that didn't fit enywhere else"
 msgstr "Settings that didn't fit enywhere else"
 
 #: libraries/config/messages.inc.php:187
-#, fuzzy
 #| msgid "Page name"
 msgid "Page titles"
-msgstr "Page name"
+msgstr "Page titles"
 
 #: libraries/config/messages.inc.php:188
 msgid ""
