--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2671,6 +2671,9 @@ msgid ""
 "html#cfg_TitleTable]documentation[/a] for magic strings that can be used to "
 "get special values."
 msgstr ""
+"Specify browser's title bar text. Refer to "
+"[a@Documentation.html#cfg_TitleTable]documentation[/a] for magic strings "
+"that can be used to get special values."
 
 #: libraries/config/messages.inc.php:189
 #: libraries/navigation_header.inc.php:83
