--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2839,10 +2839,9 @@ msgid "Texy! text"
 msgstr "Texy! text"
 
 #: libraries/config/messages.inc.php:225
-#, fuzzy
 #| msgid "Warning"
 msgid "Warnings"
-msgstr "Warning"
+msgstr "Warnings"
 
 #: libraries/config/messages.inc.php:226
 msgid "Disable some of the warnings shown by phpMyAdmin"
